...
    <string name="action_text_to_speech">Text to speech</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_view_on_web">View on web</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_apply">Apply changes</string>
    <string name="action_news">News</string>
    <string name="action_history">History</string>

    <!-- Empty states -->
    <string name="empty_news_title">Nothing here</string>
    <string name="empty_news_description">You can read more news in other categories, or refresh to try again.</string>
...
    <string name="error_tts_not_initialized">Failed to initialize speech engine</string>

    <!-- Search -->
    <string name="search_hint">Search news</string>

    <!-- Preferences -->
    <string name="pref_cozy_layout">Cozy layout</string>
    <string name="pref_dark_theme">Dark theme</string>
    <string name="pref_auto_play">Play video news automatically</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_sources">Sources</string>
    <string name="pref_categories">Categories</string>
    <string-array name="sources">
        <item>蘋果日報</item><!-- 0 -->
        <item>東方日報</item><!-- 1 -->
        <item>星島日報</item><!-- 2 -->
        <item>星島即時</item><!-- 3 -->
        <item>經濟日報</item><!-- 4 -->
...
        <item>英文虎報</item><!-- 13 -->
        <item>文匯報</item><!-- 14 -->
    </string-array>
    <string-array name="categories">
        <item>港聞</item><!-- 0 -->
        <item>國際</item><!-- 1 -->
        <item>兩岸</item><!-- 2 -->
        <item>經濟</item><!-- 3 -->
        <item>地產</item><!-- 4 -->
        <item>娛樂</item><!-- 5 -->
        <item>體育</item><!-- 6 -->
        <item>副刊</item><!-- 7 -->
        <item>教育</item><!-- 8 -->
...
