...
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_refresh_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_settings_24dp"
...
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_clear_all_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMarginLarge"
            android:layout_gravity="end|bottom"
            android:stateListAnimator="@animator/lift_on_pressed"
            app:srcCompat="@drawable/ic_open_white_24dp"
...
