<?xml version="1.0" encoding="utf-8"?>
<com.nex3z.flowlayout.FlowLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space16"
    app:flChildSpacing="@dimen/space16"
    app:flRowSpacing="@dimen/space16" />
