...
        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed" />
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="240dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space8"
...
                android:id="@+id/action_cancel"
                android:layout_marginLeft="@dimen/space8"
                android:layout_marginStart="@dimen/space8"
                android:text="@string/action_close"
                style="@style/Button.Dialog" />
            <Button
                android:id="@+id/action_ok"
                android:layout_marginLeft="@dimen/space8"
                android:layout_marginStart="@dimen/space8"
                android:text="@string/action_apply"
                style="@style/Button.Dialog.Primary" />
        </LinearLayout>
    </LinearLayout>
...
